fixtures/invalid/bad-metadata-key.lmk
@metadata key="Project Stage"
Metadata keys must be lowercase dotted keys.
